[package]
name = "exstd"
version = "0.1.1"
edition = "2021"
authors = ["STATPAN statpan@outlook.com"]
description = "exstd is a Rust library that provides a set of commonly used extensions for the Rust standard library, including serialization, asynchronous programming, HTTP requests, logging, error handling, and more."
documentation = "https://docs.rs/exstd"
readme = "README.md"
homepage = "https://github.com/StatPan/exstd"
repository = "https://github.com/StatPan/exstd"
license = "MIT"
keywords = ["rust", "extensions", "useful_library", "serde", "tokio"]
categories = ["development-tools", "api-bindings", "accessibility"]
rust-version = "1.78.0"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = "4.5.4"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.21"
parking_lot = "0.12.2"
regex = "1.10.4"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full", "mio"] }
uuid = "1.8.0"
